# flsim

./: .gitignore
src/: CMakeLists.txt  minisim.cpp
src/ConfigFile/: ConfigFile.cpp
src/DataClasses/: GeographicalCoordinate.cpp
src/Optimizer/: BinarySearchOptimizer.cpp  LinearSearchOptimizer.cpp  Optimizer.cpp
src/RaceConfig/Route/: Route.cpp
src/RaceConfig/SolarPosition/: SolarPosition.cpp
src/RaceConfig/Weather/: Weather.cpp  WeatherDataPoint.cpp  WeatherDataPoint.h
src/RaceConfig/WeatherStations/: WeatherStations.cpp
src/RaceRunner/: CMakeLists.txt  RaceRunner.cpp  RaceRunnerTests.cpp
src/RaceSegmentRunner/: CMakeLists.txt  RaceSegmentRunner.cpp  RaceSegmentRunner.h  RaceSegmentRunnerTests.cpp
src/Tools/: FileTools.cpp  Parsing.cpp  RootBinarySearch.cpp  TimeTools.cpp
src/module/: SolarCar.cpp
src/module/Aerobody/: Aerobody.cpp  AerobodyTests.cpp  CMakeLists.txt  VelocityVector.hpp
src/module/Array/: Array.cpp  ArrayTests.cpp
src/module/Battery/: Battery.cpp  BatteryTests.cpp
src/module/Motor/: Motor.cpp  Motor.h  MotorTests.cpp
src/module/Tire/: Tire.cpp  TireTests.cpp
src/old/Aerobody/: Aerobody.cpp  Aerobody.h
src/old/Array/: Array.cpp  Array.h  CMakeLists.txt
src/old/Battery/: Battery.cpp  Battery.h  BatteryState.cpp  CMakeLists.txt
src/old/Motor/: CMakeLists.txt  Motor.cpp  Motor.h
src/old/Tire/: CMakeLists.txt  Tire.cpp  Tire.h
